# llama-jni-android-chat

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE.md  README.md  SECURITY.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: models_catalog.json
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/examples/: CMakeLists.txt
app/src/main/cpp/examples/interactive/: CMakeLists.txt  interactive.cpp
app/src/main/cpp/examples/io-prompt/: CMakeLists.txt  io-prompt.cpp
app/src/main/java/com/sx/llama/jni/: ChatActivity.java  ChatMessage.java  ChatMessageAdapter.java  ChatSettingsActivity.java  ChatTurn.java  LlmInferenceSettings.java  LlmSettingsStore.java  MainActivity.java  ModelAdapter.java  ModelCatalogLoader.java  ModelDownloadHelper.java  ModelInfo.java  ModelStateStore.java  ModelStoreActivity.java  PromptFormatType.java  PromptTemplateEngine.java  SimpleItemSelectedListener.java  SimpleSeekBarListener.java  SystemRolePreset.java
app/src/main/res/drawable/: bg_chat_avatar.xml  bg_chat_bubble_assistant.xml  bg_chat_bubble_user.xml  bg_chat_composer.xml  bg_chat_header.xml  bg_chat_screen.xml  bg_chat_status_chip.xml
app/src/main/res/layout/: activity_chat.xml  activity_chat_settings.xml  activity_model_store.xml  item_chat_assistant.xml  item_chat_user.xml  item_model.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
