set(TARGET io-prompt)
add_library(${TARGET} SHARED io-prompt.cpp)
find_library(log-lib log)
target_link_libraries(${TARGET} PRIVATE llama ${CMAKE_THREAD_LIBS_INIT} ${log-lib})
target_compile_features(${TARGET} PRIVATE cxx_std_17)
#add_executable(${TARGET} sxLLama.cpp)
#target_link_libraries(${TARGET} PRIVATE common llama ${CMAKE_THREAD_LIBS_INIT})
#add_library(quantize SHARED quantize.cpp)
#target_link_libraries(quantize llama ggml utils ${log-lib})
